--- a/AutomationFramework/config.json
+++ b/AutomationFramework/config.json
@@ -1,5 +1,9 @@
 ﻿{
 	"Settings": {
 		"BrowserType": "Edge"
+	},
+	"Credentials": {
+		"Username": "Placeholder",
+		"Password": "Placeholder"
 	}
 }
