added wrapper classes for some element interactions. Started on more tests for youtube as well.

--- a/AutomationFramework/config.json
+++ b/AutomationFramework/config.json
@@ -4,6 +4,7 @@
 	},
 	"TestVariables": {
 		"Youtube": {
+			"HomePageUrl": "https://www.youtube.com/",
 			"SearchedVideo": "funny cat videos"
 		},
 		"Heroku": {
